Bug 1677353 - Ignore padding when computing definite percentages if we're abspos boxes. r=mats

As percentages in abspos boxes resolve against the padding box.

Differential Revision: https://phabricator.services.mozilla.com/D99455